fix: standardize configuration comments to align with Tailwind CSS

--- a/packages/css/src/foundation/variables/color/primitive.css
+++ b/packages/css/src/foundation/variables/color/primitive.css
@@ -3,8 +3,9 @@
 /* stylelint-disable declaration-property-value-allowed-list */
 
 /*
-  NOTE: From Tailwind CSS v4.0.0
-  https://tailwindcss.com/docs/customizing-colors#color-palette-reference
+  Configured based on Tailwind CSS
+
+  refs: https://tailwindcss.com/docs/customizing-colors#color-palette-reference
  */
 
 :root {
